--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+envs/
+*.csv
+*.fasta
+*.clstr
+*.txt
+!requirements.txt
+!data/blosum62.txt
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
